# rust-htslib

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE.md  README.md  build.rs  howto.txt  index.html  search-index.js  test.bam  test.bcf  test.rs  test_multi.bcf  wrapper.h
.cargo/: config
.github/: dependabot.yml
.github/workflows/: conventional-prs.yml  publish.yml  release-please.yml  rust.yml
benches/: my_benchmark.rs
custom_derive/: index.html
docker/: Dockerfile  Dockerfile.alpine  Dockerfile.clux  Dockerfile.gnu  Dockerfile.musl  README.md  config-musl-cross-make.mak  init_debug_docker.sh
docker/conf/: x86_64-linux-musl.conf
hts-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs  linux_prebuilt_bindings.rs  osx_prebuilt_bindings.rs  wrapper.c  wrapper.h
hts-sys/src/: lib.rs
itertools/: ChunksLazy.t.html  GroupByLazy.t.html  ISlice.t.html  MapFn.t.html  Partition.t.html  enum.Diff.html  enum.EitherOrBoth.html  enum.FoldWhile.html  enum.MinMaxResult.html  enum.Partition.html  fn.assert_equal.html  fn.equal.html  fn.linspace.html  fn.partition.html  index.html  linspace.v.html  macro.iproduct.html  macro.izip.html  sidebar-items.js  struct.Batching.html  struct.Chunk.html  struct.Chunks.html  struct.ChunksLazy.html  struct.Coalesce.html  struct.Combinations.html  struct.CombinationsN.html  struct.Dedup.html  struct.Flatten.html  struct.Format.html  struct.FormatDefault.html  struct.Group.html  struct.GroupBy.html  struct.GroupByLazy.html  struct.Groups.html  struct.ISlice.html  struct.Interleave.html  struct.InterleaveShortest.html  struct.Intersperse.html  struct.KMerge.html  struct.Linspace.html  (+26 more)
itertools/adaptors/: CombinationsN.t.html
itertools/format/: FormatDefault.t.html
itertools/free/: fn.all.html  fn.any.html  fn.chain.html  fn.cloned.html  fn.enumerate.html  fn.fold.html  fn.interleave.html  fn.join.html  fn.kmerge.html  fn.max.html  fn.merge.html  fn.min.html  fn.rciter.html  fn.rev.html  fn.sorted.html  fn.zip.html  fn.zip_eq.html  index.html
itertools/linspace/: Linspace.t.html
itertools/misc/: AppendTuple.t.html  FlatTuples.t.html  GenericRange.t.html  IntoIteratorTuple.t.html  ToFloat.t.html  index.html  struct.FlatTuples.html  trait.AppendTuple.html  trait.IntoIteratorTuple.html  trait.Slice.html
itertools/size_hint/: SizeHint.t.html  add_scalar.v.html  fn.mul.html  fn.mul_scalar.html  index.html  sub_scalar.v.html  type.SizeHint.html
itertools/zipslices/: ZipSlices.t.html
newtype_derive/: NewtypeAdd.m.html  NewtypeAddAssign.m.html  NewtypeBitXor.m.html  NewtypeBitXorAssign.m.html  NewtypeDebug.m.html  NewtypeDeref.m.html  NewtypeDerefMut.m.html  NewtypeFrom.m.html  NewtypeLowerExp.m.html  NewtypeLowerHex.m.html  NewtypeMul.m.html  NewtypeMulAssign.m.html  NewtypeNot.m.html  NewtypeOctal.m.html  NewtypePointer.m.html  NewtypeShl.m.html  NewtypeUpperHex.m.html  index.html  macro.NewtypeAdd.html  macro.NewtypeAddAssign.html  macro.NewtypeBinary!.html  macro.NewtypeBinary.html  macro.NewtypeBitAnd!.html  macro.NewtypeBitAnd.html  macro.NewtypeBitAndAssign!.html  macro.NewtypeBitAndAssign.html  macro.NewtypeBitOr!.html  macro.NewtypeBitOr.html  macro.NewtypeBitOrAssign!.html  macro.NewtypeBitOrAssign.html  macro.NewtypeBitXor.html  macro.NewtypeBitXorAssign.html  macro.NewtypeDebug.html  macro.NewtypeDeref.html  macro.NewtypeDerefMut.html  macro.NewtypeDisplay!.html  macro.NewtypeDisplay.html  macro.NewtypeDiv!.html  macro.NewtypeDiv.html  macro.NewtypeDivAssign!.html  (+34 more)
rust-htslib/: CHANGELOG.md  Cargo.toml  Cross.toml
rust-htslib/src/: tpool.rs
rust-htslib/src/bam/: ext.rs  index.rs  record.rs
rust-htslib/src/bcf/: record.rs
rust-htslib/src/faidx/: mod.rs
rust-htslib/src/tbx/: mod.rs
rust-htslib/test/: obs-cornercase.vcf  test-info-multi-string-number=A.vcf  test-info-multi-string.vcf  test.bam.bai  test.bcf  test_cram.bam  test_cram.fa  test_cram.fa.fai  test_cram.sam  test_headers.out.vcf  test_headers.vcf  test_issue_156_no_text.bam  test_left.vcf.gz.tbi  test_spliced_reads.bam  test_spliced_reads.bam.bai  test_svlen.vcf  test_various.out.vcf
rust-htslib/test/tabix_reader/: bad_header.txt.gz.tbi  test_bed3.bed.gz.tbi
rust_htslib/: index.html  sidebar-items.js
rust_htslib/bam/: BGZFError.t.html  IndexError.t.html  IndexedReader.t.html  Records.t.html  SeekError.t.html  enum.BGZFError.html  enum.IndexError.html  enum.ReadError.html  enum.SeekError.html  enum.WriteError.html  index.html  sidebar-items.js  struct.HeaderView.html  struct.IndexedReader.html  struct.Reader.html  struct.Records.html  struct.Writer.html  trait.Read.html
rust_htslib/bcf/: BCFError.t.html  WriteError.t.html  enum.BCFError.html  enum.ReadError.html  enum.WriteError.html  index.html  sidebar-items.js  struct.Reader.html  struct.Records.html  struct.Writer.html
rust_htslib/htslib/: CRAM_OPT_DECODE_MD.v.html  CRAM_OPT_MULTI_SEQ_PER_SLICE.v.html  CRAM_OPT_RANGE.v.html  CRAM_OPT_THREAD_POOL.v.html  CRAM_OPT_USE_BZIP2.v.html  CRAM_OPT_USE_RANS.v.html  CRAM_OPT_VERBOSITY.v.html  CRAM_OPT_VERSION.v.html  Enum_htsFormatCategory.t.html  SAM_PNEXT.v.html  SAM_QNAME.v.html  SAM_RGAUX.v.html  SAM_RNEXT.v.html  Struct_Unnamed1.t.html  Struct_Unnamed2.t.html  Struct_Unnamed5.t.html  Struct___bam_mplp_t.t.html  Struct_hFILE.t.html  Struct_htsFormat.t.html  Union_Unnamed3.t.html  bai.v.html  bam1_t.t.html  (+280 more)
src/: bam.rs  errors.rs  htslib.rs  lib.rs  prelude.rs  tpool.rs  utils.rs
test/: bam2sam_expected.sam  bench_1k.bam  bench_50k.bam  bench_seek_100.bam  bench_seek_100u1.bam  bench_seek_100u1.bam.bai  test.bam  test.bcf.csi  test_bed3.bed  test_bed3.bed.gz.tbi  test_bed5.bed.gz.tbi  test_cram.bam  test_cram.bam.bai  test_cram.cram  test_cram.cram.crai  test_md_align.bam  test_missing.vcf  test_non_diploid.vcf  test_nonstandard_orientation.sam  test_orientation_supplementary.sam  test_right.vcf  test_right.vcf.gz.tbi  test_string.bcf  test_string.vcf  test_trailing_omitted_format.vcf  test_unmapped.bam  test_unmapped.bam.bai  test_unmapped.cram  test_unmapped.cram.crai  test_various.out.vcf  test_various.vcf
(+1513 files in other folders)
