[package]
name = "rust-htslib"
version = "0.34.1-alpha.0"
authors = ["Christopher Schröder <christopher.schroeder@tu-dortmund.de>", "Johannes Köster <johannes.koester@tu-dortmund.de>"]
description = "This library provides HTSlib bindings and a high level Rust API for reading and writing BAM files."
readme = "README.md"
keywords = ["htslib", "bam", "bioinformatics", "pileup", "sequencing"]
license = "MIT"
repository = "https://github.com/rust-bio/rust-htslib.git"
documentation = "https://docs.rs/rust-htslib"
edition = "2018"

[package.metadata.release]
pre-release-commit-message = "release version {{version}}"
tag-message = "Version {{version}} of Rust-HTSlib."


[dependencies]
libc = "0.2"
newtype_derive = "0.1"
custom_derive = "0.1"
url = "2.1"
lazy_static = "1.4"
regex = "1.3"
linear-map = "1.2"
serde = { version = "^1", optional = true, features=["derive"] }
serde_bytes = { version = "0.11", optional = true }
bio-types = ">=0.6"
thiserror = "1"
hts-sys = { version = "1.11.0", path = "hts-sys", default-features = false }

[features]
default = ["bzip2", "lzma", "curl"]
bzip2 = ["hts-sys/bzip2"]
lzma = ["hts-sys/lzma"]
bindgen = ["hts-sys/bindgen"]
curl = ["hts-sys/curl"]
libdeflate = ["hts-sys/libdeflate"]
s3 = ["hts-sys/s3"]
gcs = ["hts-sys/gcs"]
static = ["hts-sys/static"]
serde_feature = ["serde", "serde_bytes"]

[dev-dependencies]
tempfile = "3.1.0"
bincode = "1.2"
serde_json = "1.0"
pretty_assertions = "0.6"
