[package]
authors = ["Christopher Schröder <christopher.schroeder@tu-dortmund.de>", "Johannes Köster <johannes.koester@tu-dortmund.de>"]
description = "This library provides HTSlib bindings and a high level Rust API for reading and writing BAM files."
documentation = "https://docs.rs/rust-htslib"
edition = "2018"
include = ["src/**/*", "LICENSE.md", "README.md", "CHANGELOG.md"]
keywords = ["htslib", "bam", "bioinformatics", "pileup", "sequencing"]
license = "MIT"
name = "rust-htslib"
readme = "README.md"
repository = "https://github.com/rust-bio/rust-htslib.git"
version = "0.46.0"

[package.metadata.release]
pre-release-commit-message = "release version {{version}}"
tag-message = "Version {{version}} of Rust-HTSlib."

[dependencies]
libz-sys = ">=1.1.15"
bio-types = ">=0.9"
byteorder = "1.3"
custom_derive = "0.1"
derive-new = "0.5"
hts-sys = {version = "2.1.1", default-features = false}
ieee754 = "0.2"
lazy_static = "1.4"
libc = "0.2"
linear-map = "1.2"
newtype_derive = "0.1"
regex = "1.3"
serde = {version = "^1", optional = true, features = ["derive"]}
serde_bytes = {version = "0.11", optional = true}
thiserror = "1"
url = "2.1"

[features]
bindgen = ["hts-sys/bindgen"]
bzip2 = ["hts-sys/bzip2"]
curl = ["hts-sys/curl"]
default = ["bzip2", "lzma", "curl"]
gcs = ["hts-sys/gcs"]
libdeflate = ["hts-sys/libdeflate"]
lzma = ["hts-sys/lzma"]
s3 = ["hts-sys/s3"]
serde_feature = ["serde", "serde_bytes", "bio-types/serde"]
static = ["hts-sys/static"]

[dev-dependencies]
bincode = "1.2"
pretty_assertions = "0.6"
serde_json = "1.0"
tempfile = "3.1.0"
