[package]
name = "hts-sys"
version = "2.0.3"
authors = ["Christopher Schröder <christopher.schroeder@tu-dortmund.de>", "Johannes Köster <johannes.koester@tu-dortmund.de>"]
build = "build.rs"
links = "hts"
description = "This library provides HTSlib bindings."
readme = "README.md"
keywords = ["htslib", "bam", "bioinformatics", "pileup", "sequencing"]
license = "MIT"
repository = "https://github.com/samtools/htslib.git"
documentation = "https://docs.rs/rust-htslib"
edition = "2018"

[package.metadata.release]
pre-release-commit-message = "release version {{version}}"
tag-message = "Version {{version}} of Rust-HTSlib."

[dependencies]
libz-sys = { version = "1.1.0", default-features = false, features = ["zlib-ng", "static"] }
bzip2-sys = { version = "0.1.8", optional = true }
lzma-sys = { version = "0.1.16", optional = true, features = ["static"] }
curl-sys = { version = "0.4.44", optional = true, features = ["static-curl", "static-ssl", "protocol-ftp"] }
libdeflate-sys = { version = "0.7.3", optional = true }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
openssl-sys = { version = "0.9.56", optional = true }

[features]
default = ["bzip2", "lzma", "curl"]
bzip2 = ["bzip2-sys"]
lzma = ["lzma-sys"]
curl = ["curl-sys", "openssl-sys"]
libdeflate = ["libdeflate-sys"]
gcs = ["curl"] # Google Cloud Storage support
s3 = ["curl"] # Amazon S3 support
static = [] # Don't dynamically link to other libraries

[build-dependencies]
fs-utils = "1.1"
bindgen = { version = "0.53.2", default-features = false, features = ["runtime"], optional = true }
cc = { version = "1.0", features = ["parallel"] }
glob = "0.3.0"
